@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam ArrowColor #33475b
skinparam class {
  BackgroundColor #FBFCFE
  BorderColor #33475b
  ArrowColor #33475b
}

enum UserType  {
  CEO
  CTO
  CMO
  TawerCreativeProjectManager
  .. 31 roles total ..
  TawerDevIntern
  PendingApproval
}

class User  {
  +id : UUID
  +email : String <<unique>>
  +phone : String <<unique>>
  +name : String
  -password : String <<bcrypt>>
  +isActive : Boolean
}

class Role  {
  +id : UUID
  +type : UserType
  -userId : UUID
}

class RefreshToken  {
  +token : String <<PK = the JWT>>
  -userId : UUID
  +createdAt : DateTime
}

class ResetPasswordCode  {
  +id : UUID
  +code : String <<5-digit>>
  -userId : UUID <<unique>>
  +expiredAt : DateTime
}

User "1" --> "0..*" Role : has
User "1" --> "0..*" RefreshToken : issues
User "1" --> "0..1" ResetPasswordCode : has
Role ..> UserType : type
@enduml
